# multik

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.claude/skills/multik-docs/: SKILL.md
.claude/skills/multik-docs/references/: api-reference-templates.md  diataxis-framework.md  doc-quality-rules.md  writerside-markup.md
.claude/skills/multik-kdoc/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-docs.yml  build-native.yml  build.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: multik.all-targets-kmp.gradle.kts  multik.base.gradle.kts  multik.cmake-build.gradle.kts  multik.dokka.gradle.kts  multik.host-native-kmp.gradle.kts  multik.publishing.gradle.kts
buildSrc/src/main/kotlin/org/jetbrains/kotlinx/multik/builds/: CmakeDetection.kt  HomebrewGccDetection.kt  HostDetection.kt
docs/: c.list  mk.tree  v.list
docs/cfg/: buildprofiles.xml  google-analytics-body.html  google-analytics.html
docs/topics/: FAQ.md  community-and-contribution.md  overview.md  welcome.topic
docs/topics/apiDocs/: IO-operations.md  all.md  any.md  append.md  arange.md  arithmetic-operations.md  array-creation.md  array-objects.md  array-operations.md  asSequence.md  associate.md  average.md  chunked.md  clip.md  comparison-operations.md  constants.md  contains.md  correlation-analysis.md  count.md  createAlignedNDArray.md  d1array.md  d2array.md  d2arrayIndices.md  d3array.md  d3arrayIndices.md  d4array.md  d4arrayIndices.md  descriptive-statistics.md  dimension.md  distinct.md  dnarray.md  dot.md  drop.md  eigenvalues-and-eigenvectors.md  filter.md  find.md  first.md  flatMap.md  fold.md  forEach.md  (+49 more)
docs/topics/gettingStarted/: engines-of-multik.md  getting-started.topic  installation.md  multik-on-JVM.md  multik-on-JavaScript.md  multik-on-WASM.md  multik-on-desktop.md  multik-on-different-platforms.md  multik-on-mobile.md
docs/topics/userGuide/: array-fundamentals.md  complex-numbers.md  copies-and-views.md  creating-multidimensional-arrays.md  indexing-and-slicing.md  input-and-output.md  iterating-over-arrays.md  performance-and-optimization.md  shape-manipulation.md  type-casting.md  user-guide.topic
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
multik-core/: build.gradle.kts
multik-core/api/: multik-core.api
multik-core/src/commonMain/kotlin/org/jetbrains/kotlinx/multik/api/: Engine.kt  EngineFactory.kt  Multik.kt  constructors.kt  createAlignedNDArray.kt  primitiveArrays.kt  random.kt
multik-core/src/commonTest/kotlin/org/jetbrains/kotlinx/multik/creation/: create1DArray.kt  create2DArray.kt  create3DArray.kt  create4DArray.kt  createNDArray.kt
multik-core/src/commonTest/kotlin/org/jetbrains/kotlinx/multik/iterable/: IterableNDArrayTest.kt
multik-core/src/commonTest/kotlin/samples/: readmeSnippets.kt
multik-core/src/commonTest/kotlin/samples/docs/: creation.kt
multik-core/src/commonTest/kotlin/samples/docs/apiDocs/: arrayCreation.kt  arrayObjects.kt  arrayOperations.kt
multik-core/src/commonTest/kotlin/samples/docs/userGuide/: aboutMultik.kt  basic.kt  complexNumbers.kt  copiesAndViews.kt  creatingMultidimensionalArrays.kt  indexingAndSlicing.kt  inputAndOutput.kt  iteratingOverArrays.kt  performanceAndOptimization.kt  shapeManipulation.kt  typeCasting.kt
multik-core/src/jsMain/kotlin/org/jetbrains/kotlinx/multik/api/: Engine.kt
multik-core/src/nativeMain/kotlin/org/jetbrains/kotlinx/multik/api/: Engine.kt
multik-core/src/wasmJsMain/kotlin/org/jetbrains/kotlinx/multik/api/: Engine.kt
multik-default/: build.gradle.kts
multik-default/api/: multik-default.api
multik-default/src/commonMain/kotlin/org/jetbrains/kotlinx/multik/default/: DefaultEngine.kt  DefaultEngineFactory.kt
multik-default/src/desktopMain/kotlin/org.jetbrains.kotlinx.multik.default/: DefaultEngineFactory.kt  DefaultNativeEngine.kt
multik-default/src/desktopMain/kotlin/org.jetbrains.kotlinx.multik.default/linalg/: DefaultLinAlg.kt
multik-default/src/desktopMain/kotlin/org.jetbrains.kotlinx.multik.default/math/: DefaultMathEx.kt
multik-default/src/desktopMain/kotlin/org.jetbrains.kotlinx.multik.default/stat/: DefaultStatistics.kt
multik-default/src/iosMain/kotlin/org.jetbrains.kotlinx.multik.default/linalg/: DefaultLinAlgEx.kt
multik-default/src/iosMain/kotlin/org.jetbrains.kotlinx.multik.default/stat/: DefaultStatistics.kt
multik-default/src/jsMain/kotlin/org.jetbrains.kotlinx.multik.default/: DefaultEngineFactory.kt  DefaultJsEngine.kt
multik-default/src/jsMain/kotlin/org.jetbrains.kotlinx.multik.default/linalg/: DefaultLinAlgEx.kt
multik-default/src/jsMain/kotlin/org.jetbrains.kotlinx.multik.default/stat/: DefaultStatistics.kt
multik-default/src/jvmMain/kotlin/org/jetbrains/kotlinx/multik/default/: DefaultEngineFactory.kt
multik-default/src/wasmJsMain/kotlin/org/jetbrains/kotlinx/multik/default/: DefaultEngineFactory.kt  DefaultWasmEngine.kt
multik-kotlin/: build.gradle.kts
multik-kotlin/api/: multik-kotlin.api
multik-kotlin/src/commonMain/kotlin/org/jetbrains/kotlinx/multik/kotlin/: KEEngine.kt
multik-kotlin/src/commonTest/kotlin/org/jetbrains/kotlinx/multik_kotlin/linAlg/: KELinAlgTest.kt
multik-kotlin/src/commonTest/kotlin/org/jetbrains/kotlinx/multik_kotlin/math/: KEMathTest.kt
multik-kotlin/src/jsMain/kotlin/org.jetbrains.kotlinx.multik/kotlin/: KEEngine.kt
multik-kotlin/src/jvmTest/kotlin/org/jetbrains/kotlinx/multik_kotlin/: EngineInitializationConcurrencyTest.kt
multik-openblas/: build.gradle.kts
multik-openblas/api/: multik-openblas.api
multik-openblas/multik_jni/: CMakeLists.txt
multik-openblas/multik_jni/src/main/cpp/: JniStat.cpp  jni_JniMath.cpp  jni_Linalg.cpp  mk_linalg.cpp  mk_math.cpp
multik-openblas/multik_jni/src/main/headers/: mk_stat.h
multik-openblas/src/jvmMain/kotlin/org/jetbrains/kotlinx/multik/openblas/: Loader.kt  (+1 more)
(+109 files in other folders)
